--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1>Meet new and interesting cats nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting cats nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -68,26 +68,29 @@
 
   <section id="features">
 
-    <div class="row">
-      <div class="feature-box col-lg-4">
-        <i class="icon fas fa-check-circle fa-4x"></i>
-        <h3>Easy to use.</h3>
-        <p>So easy to use, even your cat could do it.</p>
+    <div class="container-fluid">
+
+
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-check-circle fa-4x"></i>
+          <h3 class="feature-title">Easy to use.</h3>
+          <p>So easy to use, even your cat could do it.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-bullseye fa-4x"></i>
+          <h3 class="feature-title">Elite Clientele</h3>
+          <p>We have all the cats, the greatest cats.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-heart fa-4x"></i>
+          <h3 class="feature-title">Guaranteed to work.</h3>
+          <p>Find the love of your cats life or your money back.</p>
+        </div>
       </div>
-      <div class="feature-box col-lg-4">
-        <i class="icon fas fa-bullseye fa-4x"></i>
-        <h3>Elite Clientele</h3>
-        <p>We have all the cats, the greatest cats.</p>
-      </div>
-      <div class="feature-box col-lg-4">
-        <i class="icon fas fa-heart fa-4x"></i>
-        <h3>Guaranteed to work.</h3>
-        <p>Find the love of your cats life or your money back.</p>
-      </div>
+
+
     </div>
-
-
-
 
 
 
@@ -100,13 +103,13 @@
 
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other cats for love. I've found the hottest Bengal on TinCat. Meow.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other cats for love. I've found the hottest Bengal on TinCat. Meow.</h2>
           <img class="testimonial-img" src="images/cat-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
-          <h2>My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial-text">My cat used to be so lonely, but with TinCat's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-img" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
@@ -141,7 +144,7 @@
 
 
 
-    <h2>A Plan for Every Cats Needs</h2>
+    <h2 class="section-heading">A Plan for Every Cats Needs</h2>
     <p>Simple and affordable price plans for your and your cat.</p>
     <div class="row">
 
@@ -151,7 +154,7 @@
             <h3>European Shorthair</h3>
           </div>
           <div class="card-body">
-            <h2>Free</h2>
+            <h2 class="price-text">Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
             <p>Unlimited App Usage</p>
@@ -167,7 +170,7 @@
             <h3>British Shorthair</h3>
           </div>
           <div class="card-body">
-            <h2>$49 / mo</h2>
+            <h2 class="price-text">$49 / mo</h2>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
             <p>Unlimited App Usage</p>
@@ -182,7 +185,7 @@
             <h3>Exotic Shorthair</h3>
           </div>
           <div class="card-body">
-            <h2>$99 / mo</h2>
+            <h2 class="price-text">$99 / mo</h2>
             <p>Pirority Listing</p>
             <p>Unlimited Matches</p>
             <p>Unlimited Messages</p>
@@ -199,22 +202,29 @@
 
   <section id="cta">
 
-    <h3 class="cta-head">Find the True Love of Your Cats Life Today.</h3>
-    <button class="download btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i>Download</button>
-    <button class="download btn btn-lg btn-light" type="button"><i class="fab fa-google-play"></i>Download</button>
+    <div class="container-fluid">
 
+
+
+      <h3 class="big-heading">Find the True Love of Your Cats Life Today.</h3>
+      <button class="download btn btn-lg btn-dark" type="button"><i class="fab fa-apple"></i>Download</button>
+      <button class="download btn btn-lg btn-light" type="button"><i class="fab fa-google-play"></i>Download</button>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
   <footer id="footer">
-    <i class="social-icon fab fa-facebook-f"></i>
-    <i class="social-icon fab fa-twitter"></i>
-    <i class="social-icon fab fa-instagram"></i>
-    <i class="social-icon fas fa-envelope"></i>
-    <p>© Copyright 2018 TinCat</p>
+    <div class="container-fluid">
 
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
+      <p>© Copyright 2018 TinCat</p>
+
+    </div>
   </footer>
 
 
